--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,13 +1,35 @@
 body {
-  margin: 20px;
+  color: #4d4d4d;
+  font-family: Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: .01em;
+  line-height: 1.6;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 112rem;
+  padding: 3em 2rem 0;
+  position: relative;
+  width: 100%;
+}
+
+.error-msg {
+  display: block;
+  color: #e50000;
+}
+
+.form-group {
+  margin-top: .6rem;
+  margin-bottom: .6rem;
+
+  label {
+    font-weight: bold;
+  }
 }
 
 .text-center {
   text-align: center;
-}
-
-.error-msg {
-  color: red;
 }
 
 .table-loading {
